--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,12 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "node-sass": "4.14.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "17.0.1",
+    "react-dev-utils": "11.0.3",
+    "react-dom": "17.0.1",
     "react-recaptcha": "^2.3.10",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
