--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "devDependencies": {
     "env-cmd": "^10.0.1",
-    "jest": "^24.9.0",
+    "jest": "26.6.3",
     "nodemon": "^2.0.1",
     "supertest": "^4.0.2"
   }
