--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "TaskWorks.co",
+  "short_name": "Check Off",
   "name": "Manage your product to-do's with this easy to use, free task management software!",
   "icons": [
     {
@@ -8,7 +8,7 @@
       "type": "image/x-icon"
     }
   ],
-  "start_url": "https://taskworks.co/",
+  "start_url": "https://tjvaughn-zen.herokuapp.com",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
