--- a/client/package.json
+++ b/client/package.json
@@ -7,13 +7,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "is-svg": "4.2.2",
     "node-sass": "4.14.1",
     "react": "17.0.1",
     "react-dev-utils": "11.0.4",
     "react-dom": "17.0.1",
     "react-recaptcha": "^2.3.10",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "ssri": "8.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
