--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "bootstrap": "^5.0.2",
+    "gsap": "^3.7.0",
     "is-svg": "4.2.2",
     "node-sass": "4.14.1",
     "react": "17.0.1",
