--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "Check Off",
+  "short_name": "Could Do",
   "name": "Manage your product to-do's with this easy to use, free task management software!",
   "icons": [
     {
